Pip install jupyter for Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "2.7"
   - "3.5"
 install:
+  - "pip install jupyter"
   - "pip install flake8"
 script:
  - jupyter nbconvert notebooks/*.ipynb --stdout --to script | sed 's/^get_ipython.*$/# noqa/' | flake8 - --ignore=F401,F404,E402,E703,E712,W291,W293 flake.out
