--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
   - "2.7"
-  - "3.5"
 install:
   - "pip install flake8"
   - "pip install six"
 script:
   - "pip install jupyter"
-  - jupyter nbconvert notebooks/*.ipynb --stdout --to script | sed 's/^get_ipython.*$/# noqa/' | flake8 - -v --ignore=F401,F404,E402,E703,E712,W291,W293 flake.out
+  - jupyter nbconvert notebooks/*.ipynb --stdout --to script | sed 's/^get_ipython.*$/# noqa/' | flake8 - --ignore=F401,F404,E402,E703,E712,W291,W293 flake.out
