Reorganize cells to reduce gaps and improve PEP8
Cells were reorganized and combined to eliminate some
strange looking gaps in the shared html output (caused
apparently by some space for each cell).

The imports were moved to the top as is expected in Python.
Some unused imports were removed.

The PEP8 exclusions were reduced.

The example outputs were updated.
The md example was renamed to sample_output.md (and files).

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - "pip install six"
 script:
   - "pip install jupyter"
-  - jupyter nbconvert notebooks/*.ipynb --stdout --to script | sed 's/^get_ipython.*$/# noqa/' | flake8 - --ignore=F401,F404,E402,E703,E712,W291,W293 flake.out
+  - jupyter nbconvert notebooks/*.ipynb --stdout --to script | sed 's/^get_ipython.*$/# noqa/' | flake8 - --ignore=E703,E712,W291,W293 flake.out
