Add unit tests to for the python code from the notebook.
Extracting and cleaning the code cells from the notebook
to allow some Python unit tests.

Some things are undefined outside of the notebook
environment and need to be tweaked.

Extensive library mocking is used for the part that runs
as a script. Methods are better for testing.

Added license headers in tools scripts.
Added unittest.sh script and travis entry.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
 install:
   - "pip install flake8"
   - "pip install six"
+  - pip install -r test-requirements.txt"
 script:
   - "pip install jupyter"
   - jupyter nbconvert notebooks/*.ipynb --stdout --to script | sed 's/^get_ipython.*$/# noqa/' | flake8 - --ignore=E703,E712,W291,W293 flake.out
+  - cd tools && ./unittest.sh
