--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 install:
   - "pip install flake8"
   - "pip install six"
-  - pip install -r test-requirements.txt"
+  - "pip install -r test-requirements.txt"
 script:
   - "pip install jupyter"
   - jupyter nbconvert notebooks/*.ipynb --stdout --to script | sed 's/^get_ipython.*$/# noqa/' | flake8 - --ignore=E703,E712,W291,W293 flake.out
